# cyber-council

./: .env.example  .gitignore  README.md  setup.py  test_council.py
council/: __init__.py  agents.py  cli.py  llm_config.py  mcp_adapter.py  mcp_toolkit.py  orchestrator.py  quickstart.py  requirements.txt
example_logs/: README.md  brute_force_attack.log.example  c2_communication..log.example  comprehensive_apt_attack..log.example  data_exfiltration..log.example  example_incidents.json  impossible_travel..log.example  malware_detection..log.example  privilege_escalation..log.example  suspicious_process..log.example
mcp/: __init__.py  claude_config.example.json  pyproject.toml  requirements.txt  server.py  setup.py  test_impossible_travel.py  test_server.py  verify_server.py
mcp/functions/: __init__.py  abuseipdb_check.py  alert_analyzer.py  impossible_travel.py  ioc_extractor.py  virustotal_check.py
models/impossible-travel-detector/: requirements.txt
models/impossible-travel-detector/configs/: config.yaml
models/impossible-travel-detector/src/: __init__.py  data_preprocessing.py  evaluate.py  feature_engineering.py  model.py  predict.py  train.py
models/impossible-travel-detector/src/data/processed/: engineered_data.csv
models/impossible-travel-detector/src/models/saved_models/: impossible_travel_detector_20251123_211122.keras
models/impossible-travel-detector/src/models/saved_models/evaluation_results/: classification_report.txt  confusion_matrix.csv  evaluation_metrics.csv
